--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 
 <head>
     <title>Javascript Project</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+    
 </head>
 <body>
+    <div id="clockDiv"><span id = "clock"></span></div>
+
     <script src="script.js"></script>
 </body>
 </html>
