experimented with alarms and modified css slightly

--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
         <div id= "buttons">
             <button id="twelveHour"> 12 hour time</button>
             <button id="twentyFourHour"> 24 hour time</button>
+            <!--<button id="alarm">Set Alarm</button> -->
         </div>
-    </div>
-        
 
+     <!--   <span id="alarmInput">
+            <input type="time" id="alarmTime">
+            <button id="confirmAlarm">Confirm Time</button>
+        </span>
+        <span id="alarmText"><p>Alarm set for :<span id="alarmmmm"></span></p></span>
+    </div>
+-->
     <script src="script.js"></script>
 </body>
 </html>
